// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`AppLayout matches initial layout snapshot 1`] = `
" prompt: ./test-prompt.md                                                                                     runs: 0/3 
┌──────────────────┐┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Sessions         ││Terminal Output                                                                                   │
│                  ││                                                                                                  │
│ No runs yet      ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
└──────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 q: quit                                                                                                                
"
`;

exports[`AppLayout with runs shows session list 1`] = `
" prompt: ./improve.md                                                                                         runs: 3/5 
┌──────────────────┐┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Sessions         ││Terminal Output                                                                                   │
│ Run #1 (32s) ✓   ││                                                                                                  │
│ Run #2 (15s) ✓   ││                                                                                                  │
│ Run #3 ...       ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
│                  ││                                                                                                  │
└──────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 q: quit                                                                                                                
"
`;
